# FrameworkCMakeToolkit

./: .cproject  .gitignore  .project  CMakeLists.txt  MIT-LICENSE.txt  README.md
Applications/projectA/: CMakeLists.txt
Applications/projectA/CMake/: Documentation.cmake  Doxyfile-html.cmake  FindGprof2Dot.cmake  FindmyLibrary.cmake  Package.cmake  Profile.cmake  Project.cmake  Test.cmake
Applications/projectA/include/: TestSum.hpp
Applications/projectA/src/: TestSum.cpp  main.cpp
Applications/projectA/test/include/: TestSum.hpp
CMakeToolkit/: CMakeLists.txt.executable  CMakeLists.txt.library  CMakeLists.txt.root_folder  CMakeLists.txt.subfolder
CMakeToolkit/CMake/: Package.cmake  Project.cmake
Demos/: CMakeLists.txt
Demos/projectB/: CMakeLists.txt
Demos/projectB/CMake/: Documentation.cmake  FindGprof2Dot.cmake  FindmyLibrary.cmake  Package.cmake  Profile.cmake  Project.cmake
Demos/projectB/include/: TestSum.hpp
Demos/projectB/src/: TestSum.cpp  main.cpp
Demos/projectB/test/include/: TestSum.hpp
Examples/FrameworkTest/: README.md
Examples/FrameworkTest/Demos/projectB/CMake/: FindGprof2Dot.cmake  Profile.cmake  Project.cmake
Examples/FrameworkTest/myLibrary/CMake/: Package.cmake
Examples/FrameworkTest/myLibrary/include/: Sum.hpp
Examples/SimpleProject/: AUTHORS.txt  CMakeLists.txt  MIT-LICENSE.txt  README.md
Examples/SimpleProject/CMake/: FindGProf.cmake  Project.cmake
Examples/SimpleProject/include/: DummyClass.hpp
Examples/SimpleProject/src/: DummyClass.cpp  main.cpp
FrameworkTest/: README.md
FrameworkTest/Applications/projectA/CMake/: Doxyfile-html.cmake  Test.cmake
FrameworkTest/Demos/: CMakeLists.txt
FrameworkTest/Demos/projectB/CMake/: Doxyfile-html.cmake
FrameworkTest/myLibrary/test/include/: TestSum.hpp
myLibrary/: CMakeLists.txt
myLibrary/CMake/: Documentation.cmake  Doxyfile-html.cmake  FindGProf.cmake  FindGprof2Dot.cmake  FindmyLibrary.cmake  Package.cmake  Profile.cmake  Project.cmake
myLibrary/src/: Sum.cpp
